fix cards and submit button
Changes score-card to make background of playing cards visible (i.e.,
green/yellow/red). Aligns with bottom of the screen on large devices
and cards not stretched. Submit button repositioned.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+
 /* Base styles */
 html {
     box-sizing: border-box;
@@ -145,8 +146,8 @@ body {
 }
 
 .score-card img {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     object-fit: contain;
 }
 
@@ -228,6 +229,7 @@ body {
 
     .cribbage-board__image--png {
         display: block !important;
+        transform: scale(0.8);
     }
 
     .cribbage-board img {
@@ -239,7 +241,8 @@ body {
     .scoreboard {
         position: relative;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        align-items: center;
         justify-content: space-between;
         width: 100%;
         padding: 10px 0;
@@ -266,6 +269,12 @@ body {
 
     .scoreboard-row {
         margin-bottom: 5px;
+        dsiplay: flex;
+        justify-content: center;
+    }
+
+    .score-card {
+        flex: 0 0 auto;
     }
 
     .hand-container {
@@ -296,7 +305,7 @@ body {
 
     .submit-btn {
         position: fixed;
-        bottom: calc(10px + 70px + 10px); /* Adjusted for smaller card size */
+        bottom: calc(10px + 70px + 30px); /* Adjusted for smaller card size */
         font-size: 14px;
         padding: 8px 16px;
         left: 50%;
@@ -318,41 +327,33 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-    .hand-container {
-        position: static;
-        margin-top: 20px;
+    body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
     }
 
-    .submit-btn {
-        position: static;
-        transform: none;
-        margin-top: 20px;
-    }
-    
-    .scoreboard {
+    .main {
+        flex-grow: 1;
+        display: flex;
         flex-direction: column;
     }
 
-    .scoreboard::before {
-        display: none;
-    }
-
-    .scoreboard-row {
-        margin-bottom: 10px;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    body {
-        font-size: 18px;
-    }
-
     .game-container {
-        max-width: 900px;
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
     }
 
-    .card {
-        width: 80px;
-        height: 112px;
+    .hand-container {
+        position: static;
+        margin-top: auto;
+        padding: 20px 0;
+    }
+
+    .submit-btn {
+        position: fixed;
+        margin-bottom: 40px;
+        margin-top: 20px;
     }
 }
